# BME_BSc

1. Felev/Digit/: Névtelen dokumentum.docx
2. Felev/Bsz2/: 1.-Leszámlálási-alapfogalmak.docx  10.docx  11-Számelmélet.docx  12-Kongurenciák.docx  13.docx  14.docx  2.-Gráfelméleti-alapfogalmak.docx  3-Kruskal.docx  4-Legrövidebb-utak.docx  5-Mélységi-keresés.docx  6-Euler-Hamilton.docx  7-Gráfszínezés.docx  8-másolata.docx  9-Páros-gráfok.docx
2. Felev/Prog2/: Nagyhazi dokumentacio.docx  Nagyházi specifikáció.docx  Nagyházi terv.docx  ~$gyházi specifikáció.docx
2. Felev/Szar/: Háttértárak_Normál.ppt  Memóriakezelés_Normál.ppt  elsozhelm.docx
3. Felev/KomHál/: Jegyzet.docx
3. Felev/Prog3/: 4099.docx
3. Felev/Reelm/: kerdesek_valaszok.doc
3. Felev/SzofTech/: Downfall game.html  Downfall.docx
4. Felev/Opre/: Virt2.docx
5. Felev/IT eszkozok/: iteszk.py
5. Felev/MI/: Dontesi_fa.xlsx  MI elméleti kérdések másolata.docx  Névtelen dokumentum.docx  dontesi_fa.py
5. Felev/MikMak/: megoldas_a_f_mikrozh.docx  szamologep.xlsx
5. Felev/OO szofvertervezes/: Névtelen dokumentum.docx
6. Felev/Flutter/: videolink.txt
Szabvál/cpp11/LogoInterpreter/: CMakeLists.txt  command.h  commandBox.h  drawable.h  exception.h  header.h  input.txt  line.h  main.cpp  page.h  point.h  rectangle.h  renderer.h  turtle.h  window.cpp  window.h
Zarovizsga/: APIDesign.md  cleanCode.md  concurrentParalell.md  distributed.md  heuristics.md  idioms.md  immutable.md  oop.md  patterns.md  principles.md  refactoring.md  szakdoga.drawio  terms.md  todo.md  vedes.md  vedes.pptx
(+1261 files in other folders)
